--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
+    "chalk": "^5.3.0",
     "eslint": "^9.12.0",
     "eslint-plugin-react": "^7.37.1",
     "prettier": "^2.8.8"
