--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@2captcha/captcha-solver": "^1.2.0",
     "axios": "^1.7.7",
     "commander": "^12.1.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "minio": "^8.0.1",
+    "p-queue": "^8.0.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.8.1",
